# factlog

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  LICENSE  NOTICE  README.en.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
.omc/: project-memory.json
.omc/state/: agent-replay-81ba2bfd-7506-44b5-939a-4921bb05da66.jsonl  hud-stdin-cache.json  idle-notif-cooldown.json
docs/: README.en.md  README.md
docs/guide/: concepts.en.md  concepts.md  determinism.en.md  determinism.md  install.en.md  install.md  use-cases.en.md  use-cases.md
docs/reference/: active-kb.en.md  active-kb.md  ignore-eject.en.md  ignore-eject.md  review.en.md  review.md  search-provenance.en.md  search-provenance.md  slash-commands.en.md  slash-commands.md  sources.en.md  sources.md  typed-relations.en.md  typed-relations.md  windows.en.md  windows.md
examples/sample-kb/: README.md
factlog/: __init__.py  __main__.py  cli.py  common.py  compile_facts.py  config.py  ingest.py  literal_types.py
hooks/: gate_check.sh  gate_reminder.sh  hooks.json
skills/factlog/: SKILL.md
tests/: golden.sh  setup.sh  smoke.sh  test_active_kb_config.sh  test_amend.sh  test_ask_router.sh  test_canonical_rule_firing.sh  test_check_empty_policy.sh  test_compile_dedup.sh  test_conflicts.sh  test_corroboration.sh  test_count_check.sh  test_coverage.sh  test_eject_cmd.sh  test_entity_audit.sh  test_entity_typing.sh  test_finalize.sh  test_finalize_conflict_atomicity.sh  test_gate_check.sh  test_generate_canonical_policy.sh  test_hwp_ingest.sh  test_hwpx_ingest.sh  test_ingest.sh  test_nfc_sources.sh  test_nontext_sources.sh  test_output_lang.sh  test_page_docspan.sh  test_page_template.sh  test_pip_install_cli.sh  test_pptx_ingest.sh  test_provenance.sh  test_relation_alias_rule.sh  test_review.sh  test_search.sh  test_sources_cmd.sh  test_status_cmd.sh  test_superseded_durable.sh  test_sync_ignore.sh  test_typed_literals.sh  test_validate_sources.sh  (+2 more)
tests/golden/: accepted.dl  logic_report.txt
tests/unit/: conftest.py  test_accepted_dl_linesep.py  test_ask_router_humanize.py  test_atomic_accepted_write.py  test_binary_sniffer_inverse.py  test_canonical_edb.py  test_canonical_head_guard.py  test_canonical_query.py  test_canonical_variants_of.py  test_conflict_canonical.py  test_conflict_scalar.py  test_conversion_provenance.py  test_count_evaluate_arity.py  test_dedup_anchor.py  test_dedup_engine_atoms.py  test_dependency_path_reflexive.py  test_doctor_checks.py  test_factlog_config.py  test_generate_canonical_policy.py  test_humanize.py  test_ingest.py  test_insert_bullet.py  (+21 more)
tools/: README.md  ask_router.py  check_conflicts.py  common.py  compile_facts.py  corroboration.py  coverage.py  entity_audit.py  factlog_config.py  factlog_python.sh  finalize.py  generate_logic_policy.py  literal_types.py  merge_candidates.py  resolve_stale_refs.py  review_candidates.py  run_logic_check.py  validate.py
(+14 files in other folders)
