[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "factlog"
version = "0.1.0"
description = "A Claude Code skill that turns markdown sources into verifiable, source-backed facts: the LLM extracts, a Datalog/wirelog engine verifies."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Justin Kim" }]
keywords = ["claude-code", "skill", "datalog", "wirelog", "knowledge-base", "neurosymbolic", "fact-extraction"]
dependencies = ["pyrewire>=1.0.1,<2.0"]

[project.urls]
Homepage = "https://github.com/semantic-reasoning/factlog"

[project.scripts]
factlog = "factlog.cli:main"

[tool.setuptools]
packages = ["factlog"]
