[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "factlog"
version = "0.3.0"
description = "A Claude Code skill that turns markdown sources into verifiable, source-backed facts: the LLM extracts, a Datalog/wirelog engine verifies."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Justin Kim" }]
keywords = ["claude-code", "skill", "datalog", "wirelog", "knowledge-base", "neurosymbolic", "fact-extraction"]
dependencies = ["pyrewire>=1.0.1,<2.0"]

[project.optional-dependencies]
test = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/semantic-reasoning/factlog"

[project.scripts]
factlog = "factlog.cli:main"

[tool.setuptools]
packages = ["factlog"]

[tool.pytest.ini_options]
# Python unit tests for the pure helpers live under tests/unit/; the legacy
# end-to-end suite is shell scripts (tests/*.sh) and is run separately.
testpaths = ["tests/unit"]

[tool.ruff]
target-version = "py311"
# Lint the package and the bundled engine scripts; skip generated/cache dirs.
extend-exclude = ["examples", "**/__pycache__"]
